--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -32,3 +32,4 @@ test:
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   jwt_expiration_hours: <%= ENV["JWT_EXPIRATION_HOURS"] %>
+  domain_name: <%= "#{ENV["HEROKU_APP_NAME"]}.herokuapp.com" || ENV["DOMAIN_NAME"] %>
