fix env key in secrets.yml

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -35,5 +35,5 @@ production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   jwt_expiration_hours: <%= ENV["JWT_EXPIRATION_HOURS"] %>
   domain_name: <%= "#{ENV["HEROKU_APP_NAME"]}.herokuapp.com" || ENV["DOMAIN_NAME"] %>
-  goole_app_id: <%= ENV["GOOGLE_APP_ID"] %>
-  goole_app_secret: <%= ENV["GOOGLE_APP_SECRET"] %>
+  goole_app_id: <%= ENV["GOOGLE_CLIENT_ID"] %>
+  goole_app_secret: <%= ENV["GOOGLE_CLIENT_SECRET"] %>
